--- a/Frontend/src/layout/Navbar/navbar.css
+++ b/Frontend/src/layout/Navbar/navbar.css
@@ -54,14 +54,15 @@
     justify-content: center;
     gap: 12px;
 }
-.navbar .container .userInfo li:nth-child(1){
+.navbar .container .userInfo li{
     display: flex;
     align-items: center;
     justify-content: center;
     font-weight: 500;
 }
-.navbar .container .userInfo li:nth-child(1) img{
+.navbar .container .userInfo li img{
     height: 40px;
+    width: 40px;
     border-radius: 50%;
     margin-right: 10px;
     border: 1px solid #787878;
@@ -106,6 +107,13 @@
     background: white;
     border: 1px solid teal;
     transition: 0.3s;
+}
+
+.write .linkFont{
+    color: #000;
+}
+.write .linkFont:hover{
+    color: teal;
 }
 
 .write .linkIcon{
